--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,9 @@ html{
     --primaryColor: #7765E3;
     --secondaryColor: #3B60E4;
     --lightColor: #fff;
-    --bgColor-1: #000000;
+    --bgColor-1: #0F0E13;
     --bgColor-2: #0F0E13;
+    --ButtonColor: #000;
     --padding: 8%;
     --loadBG: #000;
 }
@@ -230,7 +231,7 @@ p{
 }
 
 .btn{
-    background-color: var(--secondaryColor);
+    background-color: var(--ButtonColor);
     color: var(--lightColor);
     text-decoration: none;
     text-align: center;
